--- a/html/index.html
+++ b/html/index.html
@@ -305,7 +305,10 @@
                     и амбициозных людей.
                 </p>
             </div>
-            <img src="../images/picInAbout.png" alt="Group of people">
+            <div class="img-gradient">
+              <img src="../images/picInAbout.png" alt="Group of people">
+            </div>
+
         </div>
     </div>
     <div class="feedback">
@@ -319,7 +322,10 @@
                 <div class="carousel-inner">
                     <div class="carousel-item active" data-bs-interval="10000">
                         <div class="bodyFeedback">
-                            <img src="../images/manWithComputerHalf.png" class="bodyFeedbackImg" alt="Man with computer">
+                          <div class="img-gradient">
+                            <img src="../images/manWithComputerHalf.png" class="body-feedback-img" alt="Man with computer">
+                          </div>
+
                             <div class="message">
                                 <div class="messageHeader">
                                     <img src="../images/avatar.png" alt="Avatar">
@@ -339,7 +345,9 @@
                     </div>
                     <div class="carousel-item" data-bs-interval="10000">
                         <div class="bodyFeedback">
-                            <img src="../images/manWithComputerHalf.png" class="bodyFeedbackImg" alt="Man with computer">
+                          <div class="img-gradient">
+                            <img src="../images/manWithComputerHalf.png" class="body-feedback-img" alt="Man with computer">
+                          </div>
                             <div class="message">
                                 <div class="messageHeader">
                                     <img src="../images/avatar.png" alt="Avatar">
