--- a/html/courses.html
+++ b/html/courses.html
@@ -224,7 +224,9 @@
                 <div class="carousel-inner">
                     <div class="carousel-item active" data-bs-interval="10000">
                         <div class="bodyFeedback">
-                            <img src="../images/manWithComputerHalf.png" class="bodyFeedbackImg" alt="Man with computer">
+                          <div class="img-gradient">
+                            <img src="../images/manWithComputerHalf.png" class="body-feedback-img" alt="Man with computer">
+                          </div>
                             <div class="message">
                                 <div class="messageHeader">
                                     <img src="../images/avatar.png" alt="Avatar">
@@ -244,7 +246,9 @@
                     </div>
                     <div class="carousel-item" data-bs-interval="10000">
                         <div class="bodyFeedback">
-                            <img src="../images/manWithComputerHalf.png" class="bodyFeedbackImg" alt="Man with computer">
+                          <div class="img-gradient">
+                            <img src="../images/manWithComputerHalf.png" class="body-feedback-img" alt="Man with computer">
+                          </div>
                             <div class="message">
                                 <div class="messageHeader">
                                     <img src="../images/avatar.png" alt="Avatar">
