--- a/html/courses.html
+++ b/html/courses.html
@@ -80,7 +80,7 @@
                 <li>Доступ к курсу <br> <span class="add-info">навсегда</span></li>
 
             </ul>
-            <div class="text-info">
+            <div class="course-text-info">
                 <b>Графический дизайнер</b> создаёт фирменный стиль компании: рисует логотипы, подбирает паттерны и шрифты. Оформляет печатную продукцию — постеры, брошюры, флаеры
                 и презентации.<br><br>
                 Работа графическим дизайнером — это симбиоз творчества и функционального подхода. С помощью классных визуальных решений вы будете создавать графику, которая точно передаст характер бренда и поможет людям узнать компанию среди сотен
