--- a/html/news.html
+++ b/html/news.html
@@ -53,7 +53,7 @@
         </nav>
         <div class="head-news">
             20.11.2022
-            <h1>Компания Google: история создания и путь к успеху</h1>
+            <h1><b>Компания Google: история создания и путь к успеху</b></h1>
             Время чтения: 3 минуты
         </div>
         <div class="text-news">
