--- a/html/pageCourse.html
+++ b/html/pageCourse.html
@@ -6,9 +6,9 @@
     <title>Страница курса</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="../src/css/buttons.css">
-    <link rel="stylesheet" href="../src/css/user-coursePage/main.css">
-    <link rel="stylesheet" href="../src/css/user-coursePage/teachers.css">
-    <link rel="stylesheet" href="../src/css/user-coursePage/modules.css">
+    <link rel="stylesheet" href="../src/css/userCoursePage/main.css">
+    <link rel="stylesheet" href="../src/css/userCoursePage/teachers.css">
+    <link rel="stylesheet" href="../src/css/userCoursePage/modules.css">
 </head>
 
 <body>
@@ -123,7 +123,7 @@
                         </div>
                     </div>
                     <div class="module-picture">
-                        <img src="../images/module-picture.png" alt="Face">
+                        <img src="../images/modulePicture.png" alt="Face">
                     </div>
                 </div>
                 <div class="module">
@@ -140,7 +140,7 @@
                         </div>
                     </div>
                     <div class="module-picture">
-                        <img src="../images/module-picture.png" alt="Face">
+                        <img src="../images/modulePicture.png" alt="Face">
                     </div>
                 </div>
             </div>
