changed padding in chat footer

--- a/html/PersonalAccount/techService.html
+++ b/html/PersonalAccount/techService.html
@@ -55,7 +55,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="card-footer">
+                        <div class="card-footer pb-5">
                             <input type="text" name="chat" placeholder="Напишите сообщение..." class="form-control p-3">
                         </div>
                     </div>
