--- a/html/userCourses.html
+++ b/html/userCourses.html
@@ -87,6 +87,23 @@
             </div>
             <button type="button" class="button-rate" name="button">Показать еще</button>
         </div>
+        <footer class="d-flex flex-row flex-wrap border-top bg-white border-dark">
+            <div class="container">
+                <div class="computer-footer">
+                    <ul class="nav justify-content-center flex-row justify-content-between mt-3 mb-3">
+                        <li>EDUSTRUM</li>
+                        <li class="nav-item">
+                            +7 999 954-77-82 <br>
+                            pochta@gmail.com
+                        </li>
+                        <li><button type="button" name="button" class="social-button">vk</button></li>
+                        <li><button type="button" name="button" class="social-button">tg</button></li>
+                        <li><button type="button" name="button" class="social-button">wa</button></li>
+                        <li class="nav-item">
+                            Политика <br> конфиденциальности
+                        </li>
+                    </ul>
+                </div>
                 <div class="mobile-footer">
                     <div class="mt-3">
                         EDUSTRUM
