--- a/html/Student/PersonalAccount/personalAccountSettingsCourseStudent.html
+++ b/html/Student/PersonalAccount/personalAccountSettingsCourseStudent.html
@@ -40,50 +40,50 @@
                 <li class="list-group-item border-bottom-0"><a href="#">История оплат</a></li>
                 <li class="list-group-item mt-5"><a href="#">Выход из аккаунта</a></li>
             </ul>
-            <div class="content-personal-account">
+            <div class="content-personal-account w-75">
                 <h2 class="mb-4">Личные данные</h2>
                 <div class="formSettings">
                     <form>
-                        <div class="mb-3">
+                        <div class="mb-3 w-75">
                             <label for="exampleFormControlInput1" class="form-label">E-mail*</label>
                             <input type="email" id="exampleFormControlInput1" class="form-control" placeholder="name@example.com">
                         </div>
-                        <div class="mb-3">
+                        <div class="mb-3 w-75">
                             <label for="exampleFormControlTextarea1" class="form-label">Имя и фамилия*</label>
                             <input class="form-control" id="exampleFormControlTextarea">
                         </div>
-                        <div class="mb-3">
+                        <div class="mb-3 w-75">
                             <label for="exampleFormControlTextarea1" class="form-label">О деятельности</label>
                             <input class="form-control" id="exampleFormControlTextarea">
                         </div>
-                        <div class="mb-5">
+                        <div class="mb-5 w-75">
                             <label for="exampleFormControlTextarea1" class="form-label">Об авторе</label>
                             <input class="form-control" id="exampleFormControlTextarea">
                         </div>
                         <h2>Социальные сети</h2>
                         <p>Вставьте ссылки на ваши социальные сети</p>
-                        <div class="mb-3 d-flex gap-2">
+                        <div class="mb-3 d-flex gap-2 w-75">
                             <img src="../../../images/socialMediaBlackIcons/instagram.svg" alt="">
                             <input class="form-control" id="exampleFormControlTextarea">
                         </div>
-                        <div class="mb-3 d-flex gap-2">
+                        <div class="mb-3 d-flex gap-2 w-75">
                             <img src="../../../images/socialMediaBlackIcons/youtube.svg" alt="">
                             <input class="form-control" id="exampleFormControlTextarea">
                         </div>
-                        <div class="mb-3 d-flex gap-2">
+                        <div class="mb-3 d-flex gap-2 w-75">
                             <img src="../../../images/socialMediaBlackIcons/vk.svg" alt="">
                             <input class="form-control" id="exampleFormControlTextarea">
                         </div>
-                        <div class="mb-3 d-flex gap-2">
+                        <div class="mb-3 d-flex gap-2 w-75">
                             <img src="../../../images/socialMediaBlackIcons/facebook.svg" alt="">
                             <input class="form-control" id="exampleFormControlTextarea">
                         </div>
-                        <div class="mb-5 d-flex gap-2">
+                        <div class="mb-5 d-flex gap-2 w-75">
                             <img src="../../../images/socialMediaBlackIcons/discord.svg" alt="">
                             <input class="form-control" id="exampleFormControlTextarea">
                         </div>
                         <h2 class="mb-3">Оповещения</h2>
-                        <div class="email-warning-text">
+                        <div class="email-warning-text w-75">
                             <p>E-mail оповещение о проверке уроков, обратной связи и т.д.</p>
                         </div>
                     </form>
