--- a/html/Student/PersonalAccount/personalAccountSettingsStudent.html
+++ b/html/Student/PersonalAccount/personalAccountSettingsStudent.html
@@ -41,7 +41,8 @@
                 <li class="list-group-item mt-5"><a href="#">Выход из аккаунта</a></li>
             </ul>
             <div class="content-personal-account">
-                <h2 class="mb-4">Личные данные</h2>
+                <h2 class="mb-4 computer-header">Личные данные</h2>
+                <h2 class="mb-4 mobile-header">Аккаунт</h2>
                 <div class="formSettings">
                     <form>
                         <div class="mb-3">
