responsive personal account page with courses

--- a/html/Teacher/PersonalAccount/personalAccountTeachersCourses.html
+++ b/html/Teacher/PersonalAccount/personalAccountTeachersCourses.html
@@ -43,6 +43,11 @@
             <div class="content-personal-account">
                 <h2 class="mb-4">Мои курсы</h2>
                 <div id="carouselOfCourses" class="carousel carousel-dark slide" data-bs-ride="carousel">
+                    <div class="carousel-indicators">
+                        <button type="button" data-bs-target="#carouselOfCourses" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                        <button type="button" data-bs-target="#carouselOfCourses" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                        <button type="button" data-bs-target="#carouselOfCourses" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                    </div>
                     <div class="carousel-inner">
                         <div class="carousel-item active" data-bs-interval="10000">
                             <div class="course-face">
@@ -51,7 +56,7 @@
                                         Курс
                                         <h1>Графический дизайнер с нуля до PRO</h1>
                                     </div>
-
+                                    <img src="../../../images/iconCourses.png" class="img-mobile img-fluid" alt="Designer">
                                     <div class="text-course">
                                         Вы изучите основные инструменты графического дизайнера, чтобы создавать элементы фирменного стиля и другую графику для бизнеса. Сможете начать карьеру в студии или на фрилансе.
                                     </div>
@@ -60,7 +65,7 @@
                                     </div>
 
                                 </div>
-                                <img src="../../../images/iconCourses.png" class="img-computer" alt="Designer">
+                                <img src="../../../images/iconCourses.png" class="img-fluid img-computer" alt="Designer">
                             </div>
                         </div>
                         <div class="carousel-item" data-bs-interval="2000">
@@ -70,7 +75,7 @@
                                         Курс
                                         <h1>Графический дизайнер с нуля до PRO</h1>
                                     </div>
-
+                                    <img src="../../../images/iconCourses.png" class="img-mobile img-fluid" alt="Designer">
                                     <div class="text-course">
                                         Вы изучите основные инструменты графического дизайнера, чтобы создавать элементы фирменного стиля и другую графику для бизнеса. Сможете начать карьеру в студии или на фрилансе.
                                     </div>
@@ -79,7 +84,7 @@
                                     </div>
 
                                 </div>
-                                <img src="../../../images/iconCourses.png" class="img-computer" alt="Designer">
+                                <img src="../../../images/iconCourses.png" class=" img-fluid img-computer" alt="Designer">
                             </div>
                         </div>
                         <div class="carousel-item">
@@ -89,7 +94,7 @@
                                         Курс
                                         <h1>Графический дизайнер с нуля до PRO</h1>
                                     </div>
-
+                                    <img src="../../../images/iconCourses.png" class="img-mobile img-fluid" alt="Designer">
                                     <div class="text-course">
                                         Вы изучите основные инструменты графического дизайнера, чтобы создавать элементы фирменного стиля и другую графику для бизнеса. Сможете начать карьеру в студии или на фрилансе.
                                     </div>
@@ -98,7 +103,7 @@
                                     </div>
 
                                 </div>
-                                <img src="../../../images/iconCourses.png" class="img-computer" alt="Designer">
+                                <img src="../../../images/iconCourses.png" class="img-fluid img-computer" alt="Designer">
                             </div>
                         </div>
                     </div>
