--- a/html/Teacher/privateMessagesTeacher.html
+++ b/html/Teacher/privateMessagesTeacher.html
@@ -7,6 +7,7 @@
     <title>Личные сообщения</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="../../src/css/buttons.css">
+    <link rel="stylesheet" href="../../src/css/footer.css">
     <link rel="stylesheet" href="../../src/css/Student/PrivateMessages/main.css">
 </head>
 
@@ -81,7 +82,7 @@
                 </div>
             </div>
         </div>
-        <footer class="d-flex flex-row flex-wrap border-top bg-white border-dark mt-5">
+        <footer class="d-flex flex-row flex-wrap border-top bg-white border-dark">
             <div class="container">
                 <div class="computer-footer">
                     <ul class="nav justify-content-center flex-row justify-content-between mt-3 mb-3">
@@ -96,6 +97,34 @@
                         <li class="nav-item">
                             Политика <br> конфиденциальности
                         </li>
+                    </ul>
+                </div>
+                <div class="mobile-footer">
+                    <div class="mt-3">
+                        EDUSTRUM
+                    </div>
+                    <div class="row  row-cols-sm-2   mt-3">
+                        <div class="col mb-3">
+                            <ul class="nav flex-column">
+                                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-dark">Главная</a></li>
+                                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-dark">Преимущества</a></li>
+                                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-dark">Курсы</a></li>
+                                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-dark">Политика конфиденциальности</a></li>
+                            </ul>
+                        </div>
+
+                        <div class="col mb-3">
+                            <ul class="nav flex-column">
+                                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-dark">Новости</a></li>
+                                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-dark">О нас</a></li>
+                                <li class="nav-item mb-2"><a href="#" class="nav-link p-0 text-dark">Контакты</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    <ul class="nav justify-content-start flex-row mb-3 gap-4">
+                        <li><button type="button" name="button" class="social-button">vk</button></li>
+                        <li><button type="button" name="button" class="social-button">tg</button></li>
+                        <li><button type="button" name="button" class="social-button">wa</button></li>
                     </ul>
                 </div>
         </footer>
