tech service responsive

--- a/html/Student/PersonalAccount/techServiceStudent.html
+++ b/html/Student/PersonalAccount/techServiceStudent.html
@@ -57,7 +57,7 @@
                     <li class="list-group-item border-bottom-0"><a href="#">История оплат</a></li>
                     <li class="list-group-item mt-5"><a href="#">Выход из аккаунта</a></li>
                 </ul>
-                <div class="w-75">
+                <div class="technical-chat">
                     <h2 class="w-75 mb-5">Напишите нам и мы ответим так быстро, как только сможем.</h2>
                     <div class="card">
                         <div class="card-header">
