--- a/html/Teacher/privateMessagesTeacher.html
+++ b/html/Teacher/privateMessagesTeacher.html
@@ -19,8 +19,8 @@
                     <img src="../../images/logo.svg" alt="logo">
                     EDUSTURM
                 </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
+                <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <img src="../../images/toggleIcon.svg" alt="Toggle Icon">
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class='navbar-nav me-auto mb-2 mb-lg-0'></ul>
@@ -58,7 +58,7 @@
                 </div>
 
             </div>
-            <div class="card w-50">
+            <div class="card">
                 <div class="card-header d-flex flex-row align-items-center gap-3">
                     <img src="../../images/avatar.png" alt="Avatar">
                     <h3>Иван Иванов</h3>
@@ -129,7 +129,7 @@
                 </div>
         </footer>
     </div>
-    <script type="text/javascript" src="../src/js/chat.js"></script>
+    <script type="text/javascript" src="../../src/js/chat.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
 </body>
 
