textearea in teacher's settings

--- a/html/Teacher/PersonalAccount/personalAccountSettingsTeacher.html
+++ b/html/Teacher/PersonalAccount/personalAccountSettingsTeacher.html
@@ -66,41 +66,41 @@
                 <h2 class="mb-4 mobile-header">Аккаунт</h2>
                 <div class="formSettings">
                     <form>
-                        <div class="mb-3 w-75">
+                        <div class="mb-3 teacher-settings-input">
                             <label for="exampleFormControlInput1" class="form-label">E-mail*</label>
                             <input type="email" id="exampleFormControlInput1" class="form-control" placeholder="name@example.com">
                         </div>
-                        <div class="mb-3 w-75">
+                        <div class="mb-3 teacher-settings-input">
                             <label for="exampleFormControlTextarea1" class="form-label">Имя и фамилия*</label>
                             <input class="form-control" id="exampleFormControlTextarea">
                         </div>
-                        <div class="mb-3 w-75">
+                        <div class="mb-3 teacher-settings-input">
                             <label for="exampleFormControlTextarea1" class="form-label">О деятельности</label>
                             <input class="form-control" id="exampleFormControlTextarea">
                         </div>
-                        <div class="mb-5 w-75">
+                        <div class="mb-5 teacher-settings-input">
                             <label for="exampleFormControlTextarea1" class="form-label">Об авторе</label>
-                            <input class="form-control" id="exampleFormControlTextarea">
+                            <textarea class="form-control" id="exampleFormControlTextarea"></textarea>
                         </div>
                         <h2>Социальные сети</h2>
                         <p>Вставьте ссылки на ваши социальные сети</p>
-                        <div class="mb-3 d-flex gap-2 w-75">
+                        <div class="mb-3 d-flex gap-2 teacher-settings-input">
                             <img src="../../../images/socialMediaBlackIcons/instagram.svg" alt="">
                             <input class="form-control" id="exampleFormControlTextarea">
                         </div>
-                        <div class="mb-3 d-flex gap-2 w-75">
+                        <div class="mb-3 d-flex gap-2 teacher-settings-input">
                             <img src="../../../images/socialMediaBlackIcons/youtube.svg" alt="">
                             <input class="form-control" id="exampleFormControlTextarea">
                         </div>
-                        <div class="mb-3 d-flex gap-2 w-75">
+                        <div class="mb-3 d-flex gap-2 teacher-settings-input">
                             <img src="../../../images/socialMediaBlackIcons/vk.svg" alt="">
                             <input class="form-control" id="exampleFormControlTextarea">
                         </div>
-                        <div class="mb-3 d-flex gap-2 w-75">
+                        <div class="mb-3 d-flex gap-2 teacher-settings-input">
                             <img src="../../../images/socialMediaBlackIcons/facebook.svg" alt="">
                             <input class="form-control" id="exampleFormControlTextarea">
                         </div>
-                        <div class="mb-5 d-flex gap-2 w-75">
+                        <div class="mb-5 d-flex gap-2 teacher-settings-input">
                             <img src="../../../images/socialMediaBlackIcons/discord.svg" alt="">
                             <input class="form-control" id="exampleFormControlTextarea">
                         </div>
