--- a/html/Teacher/PersonalAccount/personalAccountStatisticsTeacher.html
+++ b/html/Teacher/PersonalAccount/personalAccountStatisticsTeacher.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Настройки профиля</title>
+    <title>Статистика</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="../../../src/css/buttons.css">
     <link rel="stylesheet" href="../../../src/css/footer.css">
@@ -51,7 +51,7 @@
                 </div>
             </div>
         </nav>
-        <div class="personal-account-body" >
+        <div class="personal-account-body">
             <ul class="list-group list-group-flush" id="list-computer">
                 <li class="list-group-item"><a href="#">Настройки профиля</a></li>
                 <li class="list-group-item"><a href="#">Подписки</a></li>
@@ -62,39 +62,41 @@
             <div class="personal-account-statistic">
                 <div class="chart">
                     <h3>Ученики</h3>
-                    <canvas id="doughnut-chart" width="200" height="450"></canvas>
+                    <canvas id="doughnut-chart" height="450"></canvas>
+                    
                 </div>
                 <div class="other-statistic">
                     <div class="homework-statistic">
                         <h3>Сданных ДЗ</h3>
 
-                        <table class="homework-table">
-                            <tr>
-                                <th></th>
-                                <th></th>
-                                <th>276 430₽</th>
-                                <th></th>
-                                <th></th>
-                            </tr>
-                            <tr>
-                                <td><span class="grey-text">Приятель</span></td>
-                                <td><span class="grey-text">Дружище</span></td>
-                                <td><span class="grey-text">БРО</span></td>
-                                <td><span class="grey-text">Цели</span></td>
-                                <td><span class="grey-text">Покупки</span></td>
-                            </tr>
-                            <tr>
-                                <td>121 430₽</td>
-                                <td>43 500₽</td>
-                                <td>45 000₽</td>
-                                <td>59 730₽</td>
-                                <td>17 000₽</td>
-                            </tr>
+                        <table class="table table-borderless caption-top homework-table">
+                            <caption class="text-center text-black">За все время</caption>
+                            <thead>
+                                <tr>
+                                    <th class="table-common-header" colspan="5">276 430₽</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td><span class="grey-text">Приятель</span></td>
+                                    <td><span class="grey-text">Дружище</span></td>
+                                    <td><span class="grey-text">БРО</span></td>
+                                    <td><span class="grey-text">Цели</span></td>
+                                    <td><span class="grey-text">Покупки</span></td>
+                                </tr>
+                                <tr>
+                                    <td>121 430₽</td>
+                                    <td>43 500₽</td>
+                                    <td>45 000₽</td>
+                                    <td>59 730₽</td>
+                                    <td>17 000₽</td>
+                                </tr>
+                            </tbody>
                         </table>
                     </div>
                     <div class="payment-statistic">
                         <h3>Платежи</h3>
-                        <table class="payment-table">
+                        <table class="table table-borderless payment-table">
                             <tr>
                                 <th><span class="grey-text">дата/время</span></th>
                                 <th><span class="grey-text">сумма</span></th>
