--- a/html/Student/PersonalAccount/personalAccountPaymentStudent.html
+++ b/html/Student/PersonalAccount/personalAccountPaymentStudent.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Подписки</title>
+    <title>История оплат</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="../../../src/css/buttons.css">
     <link rel="stylesheet" href="../../../src/css/footer.css">
@@ -43,7 +43,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="list-group list-group-flush" id="list-mobile">
                         <li class="list-group-item"><a href="#">Настройки профиля</a></li>
-                        <li class="list-group-item"><a href="#">Подписки</a></li>
+                        <!-- <li class="list-group-item"><a href="#">Подписки</a></li> -->
                         <li class="list-group-item"><a href="#">Техподдержка</a></li>
                         <li class="list-group-item border-bottom-0"><a href="#">История оплат</a></li>
                         <li class="list-group-item mt-5"><a href="#">Выход из аккаунта</a></li>
@@ -54,7 +54,7 @@
         <div class="personal-account-body" >
             <ul class="list-group list-group-flush" id="list-computer">
                 <li class="list-group-item"><a href="#">Настройки профиля</a></li>
-                <li class="list-group-item"><a href="#">Подписки</a></li>
+                <!-- <li class="list-group-item"><a href="#">Подписки</a></li> -->
                 <li class="list-group-item"><a href="#">Техподдержка</a></li>
                 <li class="list-group-item border-bottom-0"><a href="#">История оплат</a></li>
                 <li class="list-group-item mt-5"><a href="#">Выход из аккаунта</a></li>
