--- a/html/Student/PersonalAccount/personalAccountSettingsStudent.html
+++ b/html/Student/PersonalAccount/personalAccountSettingsStudent.html
@@ -43,7 +43,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="list-group list-group-flush" id="list-mobile">
                         <li class="list-group-item"><a href="#">Настройки профиля</a></li>
-                        <li class="list-group-item"><a href="#">Подписки</a></li>
+                        <!-- <li class="list-group-item"><a href="#">Подписки</a></li> -->
                         <li class="list-group-item"><a href="#">Техподдержка</a></li>
                         <li class="list-group-item border-bottom-0"><a href="#">История оплат</a></li>
                         <li class="list-group-item mt-5"><a href="#">Выход из аккаунта</a></li>
@@ -54,7 +54,7 @@
         <div class="personal-account-body" >
             <ul class="list-group list-group-flush" id="list-computer">
                 <li class="list-group-item"><a href="#">Настройки профиля</a></li>
-                <li class="list-group-item"><a href="#">Подписки</a></li>
+                <!-- <li class="list-group-item"><a href="#">Подписки</a></li> -->
                 <li class="list-group-item"><a href="#">Техподдержка</a></li>
                 <li class="list-group-item border-bottom-0"><a href="#">История оплат</a></li>
                 <li class="list-group-item mt-5"><a href="#">Выход из аккаунта</a></li>
