--- a/html/Student/PersonalAccount/techServiceStudent.html
+++ b/html/Student/PersonalAccount/techServiceStudent.html
@@ -41,7 +41,7 @@
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="list-group list-group-flush" id="list-mobile">
                             <li class="list-group-item"><a href="#">Настройки профиля</a></li>
-                            <li class="list-group-item"><a href="#">Подписки</a></li>
+                            <!-- <li class="list-group-item"><a href="#">Подписки</a></li> -->
                             <li class="list-group-item"><a href="#">Техподдержка</a></li>
                             <li class="list-group-item border-bottom-0"><a href="#">История оплат</a></li>
                             <li class="list-group-item mt-5"><a href="#">Выход из аккаунта</a></li>
@@ -52,7 +52,7 @@
             <div class="personal-account-body">
                 <ul class="list-group list-group-flush" id="list-computer">
                     <li class="list-group-item"><a href="#">Настройки профиля</a></li>
-                    <li class="list-group-item"><a href="#">Подписки</a></li>
+                    <!-- <li class="list-group-item"><a href="#">Подписки</a></li> -->
                     <li class="list-group-item"><a href="#">Техподдержка</a></li>
                     <li class="list-group-item border-bottom-0"><a href="#">История оплат</a></li>
                     <li class="list-group-item mt-5"><a href="#">Выход из аккаунта</a></li>
