--- a/html/Teacher/PersonalAccount/personalAccountSettingsTeacher.html
+++ b/html/Teacher/PersonalAccount/personalAccountSettingsTeacher.html
@@ -44,20 +44,20 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="list-group list-group-flush" id="list-mobile">
                         <li class="list-group-item"><a href="#">Настройки профиля</a></li>
-                        <li class="list-group-item"><a href="#">Подписки</a></li>
+                        <li class="list-group-item"><a href="#">Мои курсы</a></li>
                         <li class="list-group-item"><a href="#">Техподдержка</a></li>
-                        <li class="list-group-item border-bottom-0"><a href="#">История оплат</a></li>
+                        <li class="list-group-item border-bottom-0"><a href="#">Статистика</a></li>
                         <li class="list-group-item mt-5"><a href="#">Выход из аккаунта</a></li>
                     </ul>
                 </div>
             </div>
         </nav>
         <div class="personal-account-body" >
-            <ul class="list-group list-group-flush" id="list-computer">
+            <ul class="list-group list-group-flush" id="list-mobile">
                 <li class="list-group-item"><a href="#">Настройки профиля</a></li>
-                <li class="list-group-item"><a href="#">Подписки</a></li>
+                <li class="list-group-item"><a href="#">Мои курсы</a></li>
                 <li class="list-group-item"><a href="#">Техподдержка</a></li>
-                <li class="list-group-item border-bottom-0"><a href="#">История оплат</a></li>
+                <li class="list-group-item border-bottom-0"><a href="#">Статистика</a></li>
                 <li class="list-group-item mt-5"><a href="#">Выход из аккаунта</a></li>
             </ul>
             <div class="content-personal-account">
