--- a/html/Student/PersonalAccount/personalAccountSettingsStudent.html
+++ b/html/Student/PersonalAccount/personalAccountSettingsStudent.html
@@ -64,17 +64,26 @@
                 <h2 class="mb-4 mobile-header">Аккаунт</h2>
                 <div class="formSettings">
                     <form>
-                        <div class="mb-3">
+                        <div class="account-photo">
+                            <div class="photo">
+                                <img src="../../../images/accountPhoto.svg" alt="add photo">
+                            </div>
+                            <div class="add-photo">
+                                Добавить фото
+                            </div>
+                        </div>
+                        <div class="mb-3 student-settings-input">
                             <label for="exampleFormControlInput1" class="form-label">E-mail*</label>
                             <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
                         </div>
-                        <div class="mb-5">
+                        <div class="mb-5 student-settings-input">
                             <label for="exampleFormControlTextarea1" class="form-label">Имя и фамилия*</label>
                             <input class="form-control" id="exampleFormControlTextarea1">
                         </div>
-                        <h2 class="mb-3">Оповещения</h2>
-                        <div class="email-warning-text">
-                            <p>E-mail оповещение о новом посте</p>
+                        <h2 class="mb-3 student-settings-input">Оповещения</h2>
+                        <div class="email-warning-text w-75 form-check form-switch">
+                            <label class="form-check-label" for="flexSwitchCheckDefault">E-mail оповещение о проверке уроков, обратной связи и т.д.</label>
+                            <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
                         </div>
                     </form>
                     <div class="settings-text">
