--- a/html/Teacher/PersonalAccount/personalAccountSettingsTeacher.html
+++ b/html/Teacher/PersonalAccount/personalAccountSettingsTeacher.html
@@ -53,7 +53,7 @@
             </div>
         </nav>
         <div class="personal-account-body" >
-            <ul class="list-group list-group-flush" id="list-mobile">
+            <ul class="list-group list-group-flush" id="list-computer">
                 <li class="list-group-item"><a href="#">Настройки профиля</a></li>
                 <li class="list-group-item"><a href="#">Мои курсы</a></li>
                 <li class="list-group-item"><a href="#">Техподдержка</a></li>
@@ -66,6 +66,14 @@
                 <h2 class="mb-4 mobile-header">Аккаунт</h2>
                 <div class="formSettings">
                     <form>
+                        <div class="account-photo">
+                            <div class="photo">
+                                <img src="../../../images/accountPhoto.svg" alt="add photo">
+                            </div>
+                            <div class="add-photo">
+                                Добавить фото
+                            </div>
+                        </div>
                         <div class="mb-3 teacher-settings-input">
                             <label for="exampleFormControlInput1" class="form-label">E-mail*</label>
                             <input type="email" id="exampleFormControlInput1" class="form-control" placeholder="name@example.com">
@@ -105,8 +113,9 @@
                             <input class="form-control" id="exampleFormControlTextarea">
                         </div>
                         <h2 class="mb-3">Оповещения</h2>
-                        <div class="email-warning-text w-75">
-                            <p>E-mail оповещение о проверке уроков, обратной связи и т.д.</p>
+                        <div class="email-warning-text w-75 form-check form-switch">
+                            <label class="form-check-label" for="flexSwitchCheckDefault">E-mail оповещение о проверке уроков, обратной связи и т.д.</label>
+                            <input class="form-check-input" type="checkbox" role="switch" id="flexSwitchCheckDefault">
                         </div>
                     </form>
                     <div class="settings-text">
