--- a/html/Student/PersonalAccount/techServiceStudent.html
+++ b/html/Student/PersonalAccount/techServiceStudent.html
@@ -66,7 +66,7 @@
                                 <h4>Менеджер Илья Савельев</h4>
                             </div>
                         </div>
-                        <div class="card-body d-flex flex-column justify-content-end align-items-end">
+                        <div class="card-body d-flex flex-column ">
                             <div class="sender mb-3 align-items-center w-100">
                                 <img src="../../../images/avatar.png" class="img-fluid" alt="Avatar">
                                 <div class="sender-message w-100">
