--- a/html/Student/privateMessagesStudent.html
+++ b/html/Student/privateMessagesStudent.html
@@ -63,7 +63,7 @@
                     <img src="../../images/avatar.png" alt="Avatar">
                     <h3>Иван Иванов</h3>
                 </div>
-                <div class="card-body d-flex flex-column justify-content-end align-items-end">
+                <div class="card-body d-flex flex-column ">
                     <div class="sender mb-3 align-items-center w-100">
                         <img src="../../images/avatar.png" class="img-fluid" alt="Avatar">
                         <div class="sender-message w-100">
