--- a/html/Teacher/PersonalAccount/techServiceTeacher.html
+++ b/html/Teacher/PersonalAccount/techServiceTeacher.html
@@ -50,7 +50,7 @@
                 </div>
             </nav>
             <div class="personal-account-body" >
-                <ul class="list-group list-group-flush" id="list-mobile">
+                <ul class="list-group list-group-flush" id="list-computer">
                     <li class="list-group-item"><a href="#">Настройки профиля</a></li>
                     <li class="list-group-item"><a href="#">Мои курсы</a></li>
                     <li class="list-group-item"><a href="#">Техподдержка</a></li>
