--- a/html/Teacher/PersonalAccount/personalAccountStatisticsTeacher.html
+++ b/html/Teacher/PersonalAccount/personalAccountStatisticsTeacher.html
@@ -62,7 +62,7 @@
             <div class="personal-account-statistic">
                 <div class="chart">
                     <h3>Ученики</h3>
-                    <div class="container-fluid">
+                    <div class="chart-container">
                         <canvas id="doughnut-chart" width="200px" height="450"></canvas>
                     </div>
                 </div>
